deployment/envoy.yaml
static_resources:
    listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
            codec_type: auto
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
              - name: service
                domains:
                - "*"
                routes:
                - match:
                    prefix: "/auth"
                  route:
                    cluster: auth_service
                - match:
                    prefix: "/fetch"
                  route:
                    cluster: fetch_service
                - match:
                    prefix: "/swagger"
                  route:
                    cluster: fetch_service
            http_filters:
            - name: envoy.filters.http.router
              typed_config: {}
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 1999
      filter_chains:
      - filters:
        - name: envoy.filters.network.mysql_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.network.mysql_proxy.v1alpha1.MySQLProxy
            stat_prefix: egress_mysql
        - name: envoy.filters.network.tcp_proxy
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
            stat_prefix: mysql_tcp
            cluster: mysql_cluster  

    clusters:
    - name: fetch_service
      connect_timeout: 0.25s
      type: strict_dns
      load_assignment:
        cluster_name: fetch_service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 172.28.1.4
                  port_value: 6000
    
    - name: auth_service
      connect_timeout: 0.25s
      type: strict_dns
      load_assignment:
        cluster_name: auth_service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 172.28.1.3
                  port_value: 7000

    - name: mysql_cluster
      connect_timeout: 1s
      type: strict_dns
      load_assignment:
        cluster_name: mysql_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: mysql
                  port_value: 3306
         
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
